# partial-injector

./: .gitignore  CHANGELOG.md  README.md  requirements.txt
app/: requirements.txt
app/partial_injector/: CHANGELOG.md  README.md  __init__.py  error_handling.py  partial_container.py  pinq.py  setup.py
app/partial_injector/partial_injector/: CHANGELOG.md  __init__.py  error_handling.py  partial_container.py
app/partial_injector/pinq/: __init__.py
app/scripts/: install-app-packages.py  uninstall-app-packages.py
app/spinq/: CHANGELOG.md  README.md  __init__.py  dicts.py  lists.py  setup.py
app/sversion/: CHANGELOG.md  __init__.py  error_handling.py  file_based.py  setup.py
app/test_partial_injector/: __init__.py  setup.py
app/test_partial_injector/test_partial_container/: __init__.py  test_case_inject_items.py  test_case_injected_async_output.py  test_case_injected_container.py  test_case_multiple_registrations_same_key.py  test_from_container.py
app/test_sversion/: __init__.py  test_file_based.py
local-dev/scripts/: delete-all-locks.py  fix-all-locks.py  install-all-dependencies.py  update-all-dependencies.py
partial_injector/: CHANGELOG.md  pyproject.toml
partial_injector/app/: pyproject.toml
partial_injector/app/partial_injector/: __init__.py  error_handling.py
partial_injector/partial_injector/: CHANGELOG.md  __init__.py  error_handling.py  partial_container.py  pyproject.toml
partial_injector/src/partial_injector/: error_handling.py  partial_container.py
partial_injector/test_partial_injector/: README.md  __init__.py  pyproject.toml
partial_injector/test_partial_injector/test_partial_container/: __init__.py  test_case_inject_items.py  test_case_injected_async_output.py  test_case_multiple_registrations_same_key.py  test_case_singleton_factory_resolution.py  test_case_transient_factory_resolution.py  test_case_transient_resolution.py  test_from_container.py
partial_injector/tests/: __init__.py  pyproject.toml
partial_injector/tests/test_partial_container/: __init__.py  test_case_injected_async_output.py  test_case_multiple_registrations_same_key.py  test_case_transient_factory_resolution.py  test_case_transient_resolution.py  test_from_container.py
partial_injector/tests/test_partial_injector/: __init__.py
partial_injector/tests/test_partial_injector/test_partial_container/: __init__.py
spinq/: pyproject.toml
spinq/app/: CHANGELOG.md  pyproject.toml
spinq/app/spinq/: __init__.py
spinq/spinq/: LICENSE  __init__.py  pyproject.toml
spinq/src/spinq/: __init__.py  dicts.py
sversion/app/: CHANGELOG.md  pyproject.toml
sversion/app/sversion/: __init__.py
sversion/src/sversion/: pyproject_toml_based.py  version_file_based.py
sversion/sversion/: CHANGELOG.md  README.md  __init__.py  contracts.py  error_handling.py  file_based.py  pyproject.toml
sversion/test_sversion/: __init__.py  pyproject.toml  test_pyproject_toml_based.py
sversion/tests/: README.md  __init__.py  pyproject.toml  setup.py  test_version_file_based.py
sversion/tests/test_sversion/: __init__.py
