[tool.poetry]
name = "sversion"
version = "2.1.0"
description = "Simple version management in Python"
authors = ["Kostiantyn Chomakov <kostiantyn.chomakov@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/takinosaji/partial-injector"
repository = "https://github.com/takinosaji/partial-injector"

packages = [
    { include = "sversion", from = ".." }
]

exclude = ["*.lock", "*.toml", "README.md", "LICENSE"]
include = ["CHANGELOG.md"]

classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent'
]

[tool.poetry.dependencies]
python = "^3.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
